# viet-food-decoder

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
data/: candidates.review.json  coverage.todo.md  dishes.json  flavor.archive.json  schema.md  sightings.json  wikipedia.raw.json
src/: audio_generator.py  image_cacher.py  image_finder.py  merger.py  models.py  utils.py  wikipedia_fetcher.py
static/: app.js  style.css
tests/: test_parser.py
